--- a/sample_user_config.json
+++ b/sample_user_config.json
@@ -2,8 +2,8 @@
     "extra_cmdline": {
         "pid": "0x0001",
         "vid": "0x46f4",
-        "sn": "1234XXX123",
-        "mac1": "XXYYXXYYXXYY"
+        "sn": "17A1PDN114405",
+        "mac1": "00113282C1A1"
     },
     "synoinfo": {},
     "ramdisk_copy": {},
