--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,10 +32,10 @@ jobs:
         run: ./redpill_tool_chain.sh  add https://raw.githubusercontent.com/pocopico/rp-ext/master/r8125/rpext-index.json
         
       - name: Build docker image
-        run: ./redpill_tool_chain.sh build apollolake-7.0.1-42218
+        run: ./redpill_tool_chain.sh build ds918p-7.0.1-42218
 
       - name: Create dsm image
-        run: ./redpill_tool_chain.sh auto apollolake-7.0.1-42218
+        run: ./redpill_tool_chain.sh auto ds918p-7.0.1-42218
 
       - uses: actions/upload-artifact@v2
         with:
