--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,15 @@ jobs:
       - name: Chmod
         run: chmod 0755 ./redpill_tool_chain.sh
       
-      - name: aaa
+      - name: e1000_driver
         run: ./redpill_tool_chain.sh  add https://raw.githubusercontent.com/pocopico/rp-ext/master/e1000/rpext-index.json
 
-      - name: aaa22
+      - name: realtek_8125_2.5G-driver
         run: ./redpill_tool_chain.sh  add https://raw.githubusercontent.com/pocopico/rp-ext/master/r8125/rpext-index.json
         
+      - name: pve_powerbutton_driver
+        run: ./redpill_tool_chain.sh  add https://github.com/jumkey/redpill-load/raw/develop/redpill-acpid/rpext-index.json
+
       - name: Build docker image
         run: ./redpill_tool_chain.sh build ds918p-7.0.1-42218
 
